# stm32f401-blackpill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  code-format.sh
CMake/: GNU-ARM-Toolchain.cmake  platform.cmake
CMake/Modules/: FindOpenOCD.cmake
lib-hal/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt
lib-hal/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx_conf.h
linker/: stm32f401rbt6.ld
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/inc/app/: version.h  version.h.in
src/app/src/: main.c
src/core/: delay.s  fault_handlers.c  startup_stm32f40_41xxx.s  system_stm32f4xx.c
src/drv/: CMakeLists.txt
src/drv/inc/drv/: delay.h  io.h  log.h  types.h  uart.h  wdts.h
src/drv/src/: io.c  log.c  uart.c  wdts.c
tools/: gdbinit  stm32f4discovery.cfg  stm32f4x-jlink.cfg
